# Wifi-Csi-Robustbench

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  environment.yml  pyproject.toml  requirements-lock.txt  requirements-minimal.txt
.github/: PULL_REQUEST_TEMPLATE.md
configs/: deep_model_bank.yaml  default.yaml  reference_bank.yaml  statistical_protocol.yaml
docs/: benchmark-card.md  data-card.md  experiment-protocol.md  model-card.md  model-weights.md  reproducibility.md  third-party-notices.md  weights-excluded-notice.md
scripts/: 00_check_gpu.py  01_prepare_sensefi.py  02_prepare_ut_har.py  03_run_classical_baselines.py  04_train_deep_models.py  05_eval_clean_noise.py  05_eval_corruptions.py  06_compute_csi_er.py  06_compute_csi_er_v2.py  07_plot_all.py  07_plot_paper_figures.py  08_make_report_assets.py  09_package_v2_results.py  11_package_final_results.py  12_prepare_ntu_fi_recovered.py  build_classical_reference_bank.py  download_data.py  merge_classical_shards.py  plot_benchmark_figures.py  run_research_grade_existing_models.py  run_statistical_analysis.py  run_widar_natural_shift.py  train_deep_model_bank.py  verify_data.py
src/csi_er/: er.py  (+10 more)
tests/: test_checkpoint_compatibility.py  test_classical_bank_smoke.py  test_cli_minimum.py  test_corruptions.py  test_corruptions_multi.py  test_deep_model_bank_smoke.py  test_er_formula.py  test_er_v2.py  test_features.py  test_metric_pairing_and_probit.py  test_model_param_stability.py  test_research_cache.py  test_research_reference_bank.py  test_research_validity.py  (+2 more)
(+42 files in other folders)
